crates/gpui-form-macros/tests/ui/fail/non_vec_array.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
struct Example {
    #[form(array(id = "id"))]
    items: Item,
}

struct Item;

fn main() {}
