crates/gpui-form-macros/tests/ui/fail/non_vec_array.stderr
error: #[form(array(...))] requires a Vec<T> field
 --> tests/ui/fail/non_vec_array.rs:6:12
  |
6 |     items: Item,
  |            ^^^^
